@@ -1,7 +1,8 @@
-这是我个人所有的的SSH 密钥对，仅作存放和备份。
+我的SSH 密钥对，仅作存放和备份。
 
 ```
 $ gpg ssh-env.tar.gz.asc
 $ ssh-env import ssh-env
+$ rm -f ssh-env.tar.gz
 ```
 
